# gidgethub

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  Third-Party Notices.md  dev-requirements.txt  docs_requirements.txt  flit.ini  noxfile.py  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: main.yml  release.yml
docs/: Makefile  __init__.rst  abc.rst  actions.rst  aiohttp.rst  app.rst  apps.rst  changelog.rst  conf.py  customization.py  exceptions.rst  httpx.rst  index.rst  make.bat  routing.rst  sansio.rst  tornado.rst  treq.rst
gidgethub/: __init__.py  abc.py  actions.py  aiohttp.py  app.py  apps.py  exceptions.py  httpx.py  routing.py  sansio.py  tornado.py  treq.py
gidgethub/test/: test_abc.py  test_actions.py  test_aiohttp.py  test_exceptions.py  test_httpx.py  test_routing.py  test_sansio.py  test_tornado.py  test_treq.py
gidgethub/test/samples/: convert_headers.py
gidgethub/test/samples/ping_urlencoded/: 200.json
gidgethub/test/samples/pr_diff/: 200.json  body
gidgethub/test/samples/pr_not_found/: 404.json
gidgethub/test/samples/pr_page_1/: body
gidgethub/test/samples/pr_page_last/: 200.json  body
gidgethub/test/samples/pr_single/: 200.json
scripts/: annotate_coverage.py
tests/: test_abc.py  test_actions.py  test_aiohttp.py  test_annotate_coverage.py  test_app.py  test_apps.py  test_exceptions.py  test_httpx.py  test_routing.py  test_sansio.py  test_tornado.py  test_treq.py
tests/samples/: convert_headers.py
tests/samples/GraphQL/: bad-credentials-401.json  curl-gql.sh  malformed-json-400.json  malformed-query-200.json  missing-variable-in-request-200.json  success-200.json
tests/samples/ping_urlencoded/: body
tests/samples/pr_merged/: 204.json
tests/samples/pr_not_found/: body
tests/samples/pr_page_1/: 200.json
tests/samples/pr_page_2/: 200.json  body
tests/samples/pr_single/: body
tests/samples/search_issues_page_1/: 200.json  body
tests/samples/search_issues_page_last/: 200.json  body
