[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "gidgethub"
author = "Brett Cannon"
author-email = "brett@python.org"
requires = [
    "uritemplate>=3.0.1",
    "PyJWT[crypto]>=2.4.0"
]
requires-python = ">=3.7"
license = "Apache"
keywords = "github sans-io async"
description-file = "README.rst"
classifiers = ["Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.flit.metadata.requires-extra]
test = ["importlib-resources", "pytest>=5.4.1", "pytest-asyncio", "pytest-tornasync"]
doc = ["sphinx>=4.0.0", "sphinx-rtd-theme>=0.5.2"]
# The 'dev' target should contain all dependencies listed in any extras coming
# after it to make sure that the test suite will run successfully.
dev = ["aiohttp", "black", "coverage[toml]>=5.0.3", "httpx", "mypy", "pytest-cov",
       "pytest-xdist", "tornado"]
aiohttp = ["aiohttp"]
tornado = ["tornado"]
httpx = ["httpx>=0.16.1"]

[tool.flit.metadata.urls]
Documentation = "https://gidgethub.readthedocs.io"
Repository = "https://github.com/brettcannon/gidgethub"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
