[build-system]
requires = ["flit_core <4"]
build-backend = "flit_core.buildapi"

[project]
name = "gidgethub"
authors = [
    {name = "Brett Cannon", email = "brett@python.org"},
]
description-file = "README.rst"
license = {text = "Apache"}
requires-python = ">=3.8"
keywords = ["github", "sans-io", "async"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "uritemplate>=3.0.1",
    "PyJWT[crypto]>=2.4.0",
]

[project.urls]
Documentation = "https://gidgethub.readthedocs.io"
Repository = "https://github.com/gidgethub/gidgethub"

[project.optional-dependencies]
test = [
    "importlib-resources",
    "pytest>=5.4.1",
    "pytest-asyncio",
    "pytest-tornasync",
]
doc = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.2",
]
dev = [
    "aiohttp",
    "black",
    "coverage[toml]>=5.0.3",
    "httpx",
    "mypy",
    "pytest-cov",
    "pytest-xdist",
    "tornado",
]
aiohttp = ["aiohttp"]
tornado = ["tornado"]
httpx = ["httpx>=0.16.1"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
